# GBA_project_template

./: .gitignore  CMakeLists.txt  Collision_demo.gba  GBA Template Application.md  cube.mtl  iwram_lookup.py  my_gba_executable.gba
3Dgba/: CMakeLists.txt
3Dgba/asm/fixed_point/: fix14_common_asm.inc  fix14_mul.s  fix16_common_asm.inc  fix16_mul.s
3Dgba/asm/math/: sdiv32.s
3Dgba/asm/matrix/: common_asm.inc  matrixFrame.s  matrixRotate.s  matrixSetIdentity.s  matrixTranslate.s
3Dgba/asm/matrix_done/: matrixRotate.s  matrixTranslate.s
3Dgba/include/3Dgba/: Box2D.h  box3D.h  data_types.h  division_table.h  fast.h  math.h  matrix.h  rasterize.h  ui_overlay.h
3Dgba/include/3Dgba/math/: branchless.h  division_table_14_32.h  division_table_7_16.h  fix14.h  fix7.h  math.h  matrix.h
3Dgba/src/: assem_test.cpp  assem_test.h  box.cpp  division_table.cpp  fixdivtable.cpp  matrix.cpp  rasterize.cpp  scanline_rasterize.cpp  sincos.cpp  ui_overlay.cpp
3Dgba/src/math/: division_table_14_32.cpp  division_table_7_16.cpp  matrix.cpp  sincos.cpp
3Dgba/test/: CMakeLists.txt  debug.h  math_test.cpp  matrix_test.cpp  rasterize_test.cpp  test_main.cpp  test_registry.h
ECS/: CMakeLists.txt
ECS/include/ecs/: EntityManager.h  Input.h  System.h  SystemManager.h
ECS/include/ecs/Components/: BuiltinComponents.h
ECS/include/ecs/Systems/: AudioSystem.h  InputSystem.h
ECS/src/: EntityManager.cpp  SystemManger.cpp
ECS/src/Systems/: AudioSystem.cpp  InputSystem.cpp
Examples/: Chipmunk2dTest.gba  MusicSystemTest.gba  Physics_test.gba
GBA_OS/: CMakeLists.txt
GBA_OS/gba_os/: Clock.cpp  Console.cpp  Core.cpp  GbaClock.cpp  MaxMod.cpp  OsErrors.cpp  OsErrors.h  QuickTimer.cpp  Screen.cpp  SimpleOutputStream.cpp  Tasks.cpp  UnitTests.cpp  counter.h  interrupt_manager.h
GBA_OS/gba_os/Graphics/: Graphics.cpp
GBA_OS/include/gba_os/: Clock.h  Console.h  Core.h  CoreDefs.h  MaxMod.h  QuickTimer.h  Screen.h  Signal.h  SimpleOutputStream.h  Tasks.h  UnitTest.h
GBA_OS/include/gba_os/Clock/: GbaClock.h
GBA_OS/include/gba_os/Graphics/: Graphics.h  Scene.h  Types.h
GBA_OS/unit_tests/: CMakeLists.txt  clock_test.cpp  test_main.cpp  test_registry.h
assets/: CMakeLists.txt
assets/audio/: CMakeLists.txt  warlord.mod
assets/sprites/: CMakeLists.txt  shapes.h  shapes.s  wizard_spritesheet_calciumtrice_indexed.h  wizard_spritesheet_calciumtrice_indexed.s
patches/: cache_test.patch  libfixmath.patch  test.patch
src/: CMakeLists.txt  CollisionHandlerSystem.cpp  CollisionHandlerSystem.h  Components.h  PlayerMovementSystem.cpp  PlayerMovementSystem.h  Vector.cpp  Vector.h  main.c  main.cpp
src/GBA_OS/: CMakeLists.txt  Core.cpp  Core.h  CoreDefs.h  Screen.cpp  Tasks.cpp  Tasks.h
src/GBA_OS/Clock/: GbaClock.cpp  GbaClock.h
src/engine/: CMakeLists.txt
src/engine/Actor/: Actor.cpp  Actor.h
src/engine/Clock/: GbaClock.cpp  GbaClock.h
src/engine/ECS/: Component.h  EngineComponents.h  EngineSystems.h  EntityManager.cpp  EntityManager.h  Interface.h  System.h  SystemManager.h
src/engine/ECS/Components/: EngineComponents.h
src/engine/ECS/Systems/: AnimationSystem.cpp  AnimationSystem.h  AudioSystem.cpp  AudioSystem.h  CollisionSystem.cpp  CollisionSystem.h  InputSystem.cpp  InputSystem.h  MusicSystem.cpp  MusicSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  PositionSystem.cpp  PositionSystem.h  SpriteSystem.cpp  SpriteSystem.h
src/engine/Graphics/: Animation.h  Sprite.cpp  Sprite.h  SpriteManager.cpp  SpriteManager.h
src/engine/Input/: InputHandler.cpp  InputHandler.h
src/engine/Math/: Collider.cpp  Collider.h  ColliderI.h  FixedPrecision.h  Math.cpp  Math.h  Physics.cpp  Physics.h  RigidBody.cpp  RigidBody.h  Shape.h  Shapes.cpp  Shapes.h  Space.cpp  Space.h  Vector.h
src/engine/Memory/: MemoryAllocator.h
src/engine/World/: CollisionManager.cpp  CollisionManager.h  Signal.h  World.h
tools/: CMakeLists.txt  generate_magic_numbers.py  lst_to_sym.py  magic_number_test_app.cpp
